--- a/plants/style.css
+++ b/plants/style.css
@@ -60,7 +60,7 @@ html, body {
 }
 
 .nav-item {
-    margin-right: 35px;
+    margin-right: 33px;
     margin-left: 7px;
     display: list-item;
 }
@@ -73,7 +73,6 @@ html, body {
 .nav-link1 {
     text-decoration: none;
     color:#E06733;
-
 }
 
 .welcome {
@@ -81,6 +80,8 @@ html, body {
     justify-content: space-between;
     align-items: center;
     padding: 62px 109px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .welcome .leafs {
@@ -161,19 +162,26 @@ html, body {
 .about {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-top: 93px;
+    padding-left: 109px;
+    padding-right: 109px;
+    padding-bottom: 93px;
     background: white;
     padding: 62px 109px;
     color: #499A18;
     font-family:'Inika-Regular';
 }
 
-.abous_text {
-    font-weight: 400;
+#about_text {
     font-size: 40px;
+    font-weight: 400;
+    
 }
 
 .about2 {
+    margin-bottom: 100px;
     font-size: 20px;
     color:#636060;
     font-family:'Inter-Regular';
@@ -181,10 +189,14 @@ html, body {
 
 .red {
     color:#E06733;
+    font-size: 40px;
+    font-weight: 400;
 }
 
 .houseplant {
     width: 30%;
+    width: 460px;
+    height: 470px;
 }
 
 .service {
@@ -281,7 +293,17 @@ html, body {
     line-height: 50px;
     color: #000000;
     text-decoration: none;
+    cursor: pointer;
 }
+
+a {
+    color: black; ;  
+} 
+
+   a:hover {
+    color: green;
+}
+
 .rsschool {
     font-family: 'Inter-Regular';
     font-style: normal;
@@ -290,10 +312,6 @@ html, body {
     line-height: 50px;
     color: #000000;
     text-decoration: none;
-}
-
-a {
-    padding: 1px;
 }
 
 .social-list {
