--- a/plants/style.css
+++ b/plants/style.css
@@ -17,9 +17,8 @@ html, body {
 
 .header {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    max-width: 1440px;
     align-items: center;
     font-family:'Inika-Regular';
     color: #010201;
@@ -119,7 +118,7 @@ html, body {
     font-family:'Inter-Regular';
 }
 
-.start {
+.button_start {
     display:block;
     padding: 14px 27px;
     margin-top: 48px;
@@ -129,26 +128,40 @@ html, body {
 }
 
 .button {
-    display:block;
-    padding: 10px 27px;
-    margin-top: 60px;
-    border: 2px solid #E06733;
-    border-radius: 8px;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    padding: 14px 27px;
+    margin-left: 45px;
+    padding-left: 40px;
+    padding-right: 43px;
+    border: 1px solid #E06733;
+    border-radius: 6px;
     background-color: inherit;
+    font-weight: 400;
+    font-size: 20px;
     color: #E06733;
 }
 
 .service_content {
     display: flex;
-    flex-wrap: wrap;
+    justify-self: center;
+    justify-content: space-between;
+    align-items: center;
+    align-self: flex-start;
+    margin-top: 40px;
+    margin-bottom: 75px;
+    width: 1007px;
+    height: 94px;
 }
 
 .services_buttons {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
-    align-items: start;
-    margin-left: 60px;
-    font-family:'Inika-Regular';
+    margin-top: 15px;
+    width: 559px;
+    height: 50px;
 }
 
 .about_us {
@@ -201,13 +214,14 @@ html, body {
 
 .service {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1440px;
     padding: 62px 109px;
 }
 
 .service_and {
-    padding: 0px;
+    font-style: normal;
     font-weight: 400;
     line-height: 52px;
     font-family:'Inika-Regular';
@@ -219,11 +233,44 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    row-gap: 55px;
+}
+
+.service_img {
+    border-radius: 20px 20px 0px 0px;
 }
 
 .service_item {
     display: flex;
     flex-direction: column;
+    border: 1px solid #E3E1D5;
+    border-radius: 20px 20px 20px 20px;
+    width: 330px;
+
+}
+.service_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family:'Inter-Regular';
+    font-weight: 700;
+    font-size: 20px;
+    padding-top: 7px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    color: #E06733;
+}
+.lorem {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #717171;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-family:'Inter-Regular';
+}
+.service_text1 {
+    text-align: center;
 }
 
 .Prices {
