--- a/plants/style.css
+++ b/plants/style.css
@@ -382,11 +382,7 @@ html, body {
 .green {
     color: green;
 }
-.contacts {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 62px 109px;
-}
+
 
 .content {
     display: flex;
@@ -397,14 +393,6 @@ html, body {
     height: 130px;
     background: white;
     padding: 0px 10px;
-}
-
-.contact_us {
-    padding: 0px;
-    font-weight: 700;
-    font-family:'Inika-Regular';
-    font-size: 30px;
-    color: #499A18;
 }
 
 .button2 {
@@ -434,7 +422,64 @@ html, body {
     text-align: right;
     margin-top: 0px;
     color: #000000;
-    font-family:'Inter-Regular'
+    font-family:'Inter-Regular';
+}
+
+.contacts {
+    padding-top: 53px;
+}
+.contacts_block {
+    max-width: 1220px;
+    margin: 0 auto;
+}
+.contacts_container {
+    display: flex;
+}
+.contact_us {
+    font-weight: 700;
+    font-family:'Inika-Regular';
+    font-style: normal;
+    font-size: 40px;
+    width: 700px;
+    color: #499A18;
+    margin: 7px 69px 0 112px;
+}
+.contacts_city {
+    max-width: 450px;
+    max-height: 46px;
+    width: 450px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 96px;
+    background: #D6E7D2;
+    padding-top: 3px;
+    padding-left: 20px;
+    padding-right: 35px;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+}
+.accord_btn1 {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+.accord1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
+    background: #AEA1A1;
+}
+.city_text {
+    font-family:'Inter-Regular';
+    font-size: 20px;
+    color: #717171;
 }
 .footer-data {
     display: flex;
