--- a/plants/style.css
+++ b/plants/style.css
@@ -8,6 +8,13 @@
     font-family:'Inter-Regular';
     src: url(./fonts/Inter-Regular.ttf);
     font-style: normal;
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (min-width: 380px) {
 
 }
 
@@ -38,6 +45,11 @@ html, body {
     align-items: center;
     padding-left: 10px;
 }
+
+.logo img {
+    max-width: 100%;
+}
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -82,6 +94,10 @@ html, body {
 
 .welcome .leafs {
     width: 37%;
+}
+
+.leafs {
+    max-width: 100%;
 }
 
 .text {
