--- a/plants/style.css
+++ b/plants/style.css
@@ -35,7 +35,7 @@ html, body {
     align-items: center;
     list-style: none;
     width: 100%;
-    padding: 36px 25px;
+    padding: 36px 25px 36px 9px;
 }
 
 .logo {
@@ -73,10 +73,6 @@ html, body {
    display:none
 }
 
-/* .navigation {
-    display: none;
-} */
-
 .navigation {
     position: absolute;
     top: 0;
@@ -85,7 +81,6 @@ html, body {
 
 .navigation.active {
     display: flex;
-    /* position: absolute; */
     top: 0;
     left: 0;
     height: 50%;
@@ -126,7 +121,8 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 62px 109px;
+    padding: 24px 25px;
+    /* padding: 62px 109px; */
     margin: 0 auto;
 }
 
@@ -135,24 +131,24 @@ html, body {
 }
 
 .leafs {
-    max-width: 100%;
+    display: none;
 }
 
-.text {
+.welcome__text {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    width: 45%;
     font-family:'Inter-Regular';
 }
 
 #text1 {
-    font-size: 45px;
+    font-size: 25px;
+    line-height: 35px;
     font-weight: 700;
-    line-height: 50px;
     color: #717171;
-    font-family:'Inter-Regular';
+    font-family:'Inter-Regular'; 
+    margin: 0;
 }
 
 .green {
@@ -160,19 +156,22 @@ html, body {
 }
 
 #text2 {
-    margin-top: 40px;
-    
+    margin-top: 20px;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 35px;
+    font-size: 16px;
+    line-height: 25px;
     color: #636060;
     font-family:'Inter-Regular';
 }
 
 .button_start {
     display:block;
-    padding: 14px 27px;
-    margin-top: 48px;
+    font-size: 10px;
+    line-height: 20px;
+    font-weight: 400;
+    /* padding: 14px 27px; */
+    padding: 8px 18px;
+    margin-top: 4px;
     border: 2px solid #E06733;
     border-radius: 10px;
     background-color: inherit;
@@ -218,7 +217,6 @@ html, body {
     border-radius: 5px;
     background-color: inherit;
     color: #E06733;
-    /* margin-left: 30px; */
     font-size: 20px;
     font-weight: 700;
     font-family: 'Inika-Regular';
@@ -392,7 +390,6 @@ html, body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* align-items: flex-start; */
 }
 .price-link {
     display: flex;
@@ -418,7 +415,6 @@ html, body {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    /* width: 250px; */
     width: 180px;
     height: 50px;
     background: #EDF2EC;
@@ -456,7 +452,6 @@ html, body {
     color: green;
 }
 
-
 .content {
     display: flex;
     align-items: center;
@@ -471,7 +466,6 @@ html, body {
 .text_call_us {
     display: flex;
     flex-direction: column;
-    /* align-items: flex-end; */
     align-items: center;
 }
 
@@ -489,13 +483,16 @@ html, body {
 .contacts {
     padding-top: 53px;
 }
+
 .contacts_block {
     max-width: 1220px;
     margin: 0 auto;
 }
+
 .contacts_container {
     display: flex;
 }
+
 .contact_us {
     font-weight: 700;
     font-family:'Inika-Regular';
@@ -505,6 +502,7 @@ html, body {
     color: #499A18;
     margin: 7px 69px 0 112px;
 }
+
 .contacts_city {
     max-width: 450px;
     max-height: 46px;
@@ -519,6 +517,7 @@ html, body {
     padding-right: 35px;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
+
 .accord_btn1 {
     width: 16px;
     height: 16px;
@@ -527,6 +526,7 @@ html, body {
     align-items: center;
     margin-left: 20px;
 }
+
 .accord1 {
     display: flex;
     justify-content: center;
@@ -537,11 +537,13 @@ html, body {
     border-radius: 16px;
     background: #AEA1A1;
 }
+
 .city_text {
     font-family:'Inter-Regular';
     font-size: 20px;
     color: #717171;
 }
+
 .footer-data {
     display: flex;
     justify-content: space-between;
@@ -554,6 +556,7 @@ html, body {
     line-height: 50px;
     color: #000000;
 }
+
 .github-link {
     font-family: 'Inter-Regular';
     font-style: normal;
@@ -611,6 +614,34 @@ a:hover {
         flex-direction: row;
     }
 
+    .leafs {
+        max-width: 100%;
+    }
+
+    .welcome {
+        padding: 62px 109px;
+    }
+
+    .welcome__text {
+        width: 45%;
+    }
+
+    #text1 {
+        font-size: 45px;
+        line-height: 50px;
+    }
+
+    #text2 {
+        margin-top: 40px;
+        font-size: 20px;
+        line-height: 35px;
+    }
+
+    .button_start {
+        margin-top: 48px;
+        font-size: 16px;
+        line-height: 20px;
+    }
     .price-link {
         padding: 34px 41px;
     }
