--- a/plants/style.css
+++ b/plants/style.css
@@ -188,15 +188,19 @@ html, body {
     display: block;
     justify-content: center;
     align-items: center;
-    padding: 14px 27px;
-    margin-left: 45px;
-    padding-left: 40px;
-    padding-right: 43px;
+    /* padding: 12px 40px; */
+    padding: 8px 28px;
+    /* margin-left: 45px; */
+    width: 121px;
+    height: 35px;
     border: 1px solid #E06733;
     border-radius: 5px;
     background-color: inherit;
     font-weight: 400;
-    font-size: 20px;
+    /* font-size: 20px; */
+    /* line-height: 26px; */
+    font-size: 15px;
+    line-height: 20px;
     color: #E06733;
     font-family:'Inika-Regular';
     cursor: pointer;
@@ -242,9 +246,9 @@ html, body {
 }
 
 .about_us {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: space-between; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     /* align-items: flex-start; */
     /* width: 45%; */
 }
@@ -272,55 +276,70 @@ html, body {
     line-height: 33px;
 }
 
-.houseplant {
-    /* display: none; */
-    width: 100%;
-    width: 460px;
-    height: 470px;
+.image {
+    /* display: flex; */
+    /* width: 30%; */
+    margin: -100px 115px 50px;
+    width: 150px;
+    height: 147px;
+    /* width: 460px; */
+    /* height: 470px; */
 }
 
 .service {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1440px;
-    padding: 62px 109px;
+    flex-direction: column;
+    margin: 0 auto;
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    /* padding: 62px 109px; */
+    padding: 30px 25px;
 }
 
 .service_content {
     display: flex;
-    justify-self: center;
-    justify-content: space-between;
-    align-items: center;
-    align-self: flex-start;
-    margin-top: 40px;
-    margin-bottom: 75px;
-    width: 1007px;
-    height: 94px;
+    flex-direction: column;
+    margin-bottom: 40px;
+    justify-content: start;
+    text-align: left;
+    /* justify-self: center; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    /* align-self: flex-start; */
+    /* margin-top: 40px; */
+    /* margin-bottom: 75px; */
+    /* width: 1007px; */
+    /* height: 94px; */
 }
 
 .services_buttons {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    /* justify-content: space-between; */
     margin-top: 15px;
-    width: 559px;
-    height: 50px;
+    gap: 10px;
+    /* width: 559px; */
+    /* height: 50px; */
 }
 
 .service_and {
     font-style: normal;
     font-weight: 400;
-    line-height: 52px;
+    /* line-height: 52px; */
     font-family:'Inika-Regular';
-    font-size: 40px;
+    /* font-size: 40px; */
+    font-size: 25px;
+    line-height: 32px;
     color: #499A18;
 }
 
 .services {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     row-gap: 55px;
 }
 
@@ -362,6 +381,7 @@ html, body {
 .service_text1 {
     text-align: center;
 }
+
 .prices {
     display: flex;
     justify-content: space-around;
@@ -376,7 +396,6 @@ html, body {
     background: white;
 }
     
-
 .price-text {
     font-weight: 700;
     font-size: 25px;
@@ -463,7 +482,6 @@ html, body {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    max-width: 1440px;
     height: 130px;
     background: white;
     padding: 0px 10px;
@@ -487,40 +505,36 @@ html, body {
 }
 
 .contacts {
-    padding-top: 53px;
+    display: block;
+    padding: 25px 42px 0 42px;
 }
 
-.contacts_block {
-    max-width: 1220px;
-    margin: 0 auto;
-}
-
-.contacts_container {
-    display: flex;
+.contacts_content {
+    display: block;
+    text-align: center;
+    margin-bottom: 130px;
 }
 
 .contact_us {
     font-weight: 700;
     font-family:'Inika-Regular';
     font-style: normal;
-    font-size: 40px;
-    width: 230px;
+    font-size: 25px;
+    line-height: 33px;
+    width: 100%;
+    text-align: center;
     color: #499A18;
-    margin: 7px 69px 0 112px;
+    margin-bottom: 80px;
 }
 
 .contacts_city {
-    max-width: 450px;
-    max-height: 46px;
-    width: 450px;
+    height: 50px; */
+    width: 300px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 96px;
     background: #D6E7D2;
-    padding-top: 3px;
-    padding-left: 20px;
-    padding-right: 35px;
+    padding: 5px 30px 0 20px;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
 
@@ -548,6 +562,13 @@ html, body {
     font-family:'Inter-Regular';
     font-size: 20px;
     color: #717171;
+}
+
+.woman_img {
+    display: block;
+    width: 34%;
+    margin: 0 auto;
+    /* margin-right: 113px */
 }
 
 .footer-data {
@@ -679,7 +700,63 @@ a:hover {
         font-size: 20px;
         line-height: 30px;
     }
-    
+
+    .image {
+        /* display: flex; */
+        /* width: 30%; */
+        width: 464px;
+        height: 479px;
+        padding: 10px;
+    }
+
+    .service {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 62px 109px;
+    }
+
+    .service_content {
+        flex-direction: row;
+        text-align: left;
+        justify-self: center;
+        justify-content: space-between;
+        align-items: center;
+        align-self: flex-start;
+        margin-top: 40px;
+        margin-bottom: 75px;
+        width: 1007px;
+        height: 94px;
+    }
+
+    .services_buttons {
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: inherit;
+        /* margin-top: 15px; */
+        /* gap: 10px; */
+        width: 559px;
+        height: 50px;
+    }
+
+    .service_and {
+        line-height: 52px;
+        font-size: 40px;
+    }
+
+    .services {
+        flex-direction: row;
+    }
+
+    .button {
+        padding: 12px 40px;
+        margin-left: 45px;
+        width: 161px;
+        height: 50px;
+        font-size: 20px;
+        line-height: 26px;
+    }
+
     .price-link {
         padding: 34px 41px;
     }
@@ -695,24 +772,60 @@ a:hover {
     .prices {
         padding: 62px 109px;
     }
+
     .price-block {
         align-items: flex-start;
     }
+
     .price-item {
         margin-bottom: 0px;
     }
+
     .our_best {
         font-size: 40px;
         line-height: 50px;
         text-align: right;
         margin-bottom: 38px;
     }
+
     .text_call_us {
         align-items: flex-end;
     }
 
     .contact__img {
         display: flex;
+    }
+
+    .contacts {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        padding: 60px 109px 0 109px;
+    }
+
+    .contacts_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: flex-end;
+        text-align: start;
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    .contact_us {
+        font-size: 40px;
+        line-height: 52px;
+        width: 100%;
+        text-align: left;
+        color: #499A18;
+        /* margin-bottom: 80px; */
+        /* margin: 7px 69px 0 112px; */
+    }
+
+    .contacts_city {
+        height: 50px;
+        width: 450px;
     }
 
     .button2 {
@@ -722,6 +835,15 @@ a:hover {
         font-size: 20px;
         line-height: 26px;
     }
+
+    .woman_img {
+        margin-right: 113px
+    }
+
+
+
+
+
 }
 
 @media screen and (min-width: 1440px) {
