--- a/plants/style.css
+++ b/plants/style.css
@@ -520,8 +520,7 @@ html, body {
 }
 
 .contacts_city {
-    height: 50px; */
-    width: 300px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -673,8 +672,8 @@ a:hover {
     }
 
     .about {
-        flex-direction: row;
-        padding: 93px 109px;
+        align-items: center;
+        padding: 40px 50px 95px 50px;
     }
 
     .about_us {
@@ -682,6 +681,237 @@ a:hover {
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
+        align-items: center;
+        max-width: 549px;
+    }
+
+    #about_text {
+        font-size: 35px;
+        line-height: 46px;
+        margin-bottom: 40px;
+    }
+
+    .red {
+        font-size: 35px;
+        font-weight: 400;
+    }
+
+    .about2 {
+        font-size: 20px;
+        line-height: 30px;
+        margin-bottom: 40px;
+    }
+
+    .image {
+        width: 248px;
+        height: 255px;
+        margin: 0;
+    }
+
+    .service {
+        /* flex-direction: row; */
+        /* flex-wrap: wrap; */
+        /* justify-content: space-between; */
+        /* padding: 62px 109px; */
+        padding: 60px 50px 70px 50px;
+    }
+
+    .service_content {
+        /* flex-direction: row;
+        text-align: left;
+        justify-self: center;
+        justify-content: space-between;
+        align-items: center;
+        align-self: flex-start;
+        margin-top: 40px;
+        margin-bottom: 75px;
+        width: 1007px;
+        height: 94px; */
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .services_buttons {
+        flex-direction: row;
+        /* justify-content: space-between; */
+        flex-wrap: inherit;
+        width: 559px;
+        height: 50px;
+    }
+
+    .service_and {
+        /* line-height: 52px;
+        font-size: 40px; */
+        font-size: 35px;
+        line-height: 46px;
+    }
+
+    .services {
+        flex-direction: row;
+    }
+
+    .service_item {
+        max-width: 330px;
+    }
+
+    .button {
+        /* padding: 12px 40px;
+        margin-left: 45px;
+        width: 161px;
+        height: 50px;
+        font-size: 20px;
+        line-height: 26px; */
+        margin-left: 0px;
+    }
+
+    .price-link {
+        padding: 34px 41px;
+    }
+
+    .price-basic {
+        width: 250px;
+    }
+
+    .prices_wrapper {
+        flex-direction: row;
+    }
+
+    .prices {
+        padding: 62px 109px;
+    }
+
+    .price-block {
+        align-items: flex-start;
+    }
+
+    .price-item {
+        margin-bottom: 0px;
+    }
+
+    .our_best {
+        font-size: 40px;
+        line-height: 50px;
+        text-align: right;
+        margin-bottom: 38px;
+    }
+
+    .text_call_us {
+        align-items: flex-end;
+    }
+
+    .contact__img {
+        display: flex;
+    }
+
+    .contacts {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        padding: 60px 109px 0 109px;
+    }
+
+    .contacts_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: flex-end;
+        text-align: start;
+        width: 100%;
+        margin-bottom: 0;
+    }
+
+    .contact_us {
+        font-size: 40px;
+        line-height: 52px;
+        width: 100%;
+        text-align: left;
+        color: #499A18;
+    }
+
+    .contacts_city {
+        height: 50px;
+        width: 450px;
+    }
+
+    .button2 {
+        margin-left: 30px;
+        padding: 10px 27px;
+        border: 2px solid #E06733;
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    .woman_img {
+        margin-right: 113px
+    }
+}
+
+@media screen and (min-width: 1440px) {
+
+    .content {
+        flex-direction: row;
+        line-height: 50px;
+        height: 130px;
+    }
+
+    .navbar {
+        padding: 42px 109px 25px;;
+    }
+
+    .burger {
+        display: none;
+    }
+
+    .navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        position: static;
+    }
+
+    .navigation .nav-list {
+        flex-direction: row;
+    }
+
+    .leafs {
+        display: flex;
+        max-width: 100%;
+    }
+
+    .welcome {
+        padding: 62px 109px;
+    }
+
+    .welcome__text {
+        width: 45%;
+    }
+
+    #text1 {
+        font-size: 45px;
+        line-height: 50px;
+    }
+
+    #text2 {
+        margin-top: 40px;
+        font-size: 20px;
+        line-height: 35px;
+    }
+
+    .button_start {
+        margin-top: 48px;
+        font-size: 16px;
+        line-height: 20px;
+        padding: 14px 27px;
+    }
+
+    .about {
+        flex-direction: row;
+        padding: 93px 109px;
+    }
+
+    .about_us {
         width: 45%;
     }
 
@@ -696,14 +926,7 @@ a:hover {
         font-weight: 400;
     }
 
-    .about2 {
-        font-size: 20px;
-        line-height: 30px;
-    }
-
     .image {
-        /* display: flex; */
-        /* width: 30%; */
         width: 464px;
         height: 479px;
         padding: 10px;
@@ -733,8 +956,6 @@ a:hover {
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: inherit;
-        /* margin-top: 15px; */
-        /* gap: 10px; */
         width: 559px;
         height: 50px;
     }
@@ -746,6 +967,10 @@ a:hover {
 
     .services {
         flex-direction: row;
+    }
+
+    .service_item {
+        max-width: 330px;
     }
 
     .button {
@@ -819,8 +1044,6 @@ a:hover {
         width: 100%;
         text-align: left;
         color: #499A18;
-        /* margin-bottom: 80px; */
-        /* margin: 7px 69px 0 112px; */
     }
 
     .contacts_city {
@@ -839,24 +1062,5 @@ a:hover {
     .woman_img {
         margin-right: 113px
     }
-
-    
-
-
-
 }
-
-@media screen and (min-width: 1440px) {
-    .navbar {
-        padding: 42px 109px 25px;;
-    }
-
-    .content {
-        flex-direction: row;
-        line-height: 50px;
-        height: 130px;
-    }
-}
-
-
 
