--- a/plants/style.css
+++ b/plants/style.css
@@ -123,10 +123,6 @@ html, body {
     margin: 0 auto;
 }
 
-.welcome .leafs {
-    width: 37%;
-}
-
 .leafs {
     display: none;
 }
@@ -185,17 +181,13 @@ html, body {
     display: block;
     justify-content: center;
     align-items: center;
-    /* padding: 12px 40px; */
     padding: 8px 28px;
-    /* margin-left: 45px; */
     width: 121px;
     height: 35px;
     border: 1px solid #E06733;
     border-radius: 5px;
     background-color: inherit;
     font-weight: 400;
-    /* font-size: 20px; */
-    /* line-height: 26px; */
     font-size: 15px;
     line-height: 20px;
     color: #E06733;
@@ -234,7 +226,6 @@ html, body {
     justify-content: space-between;
     flex-direction: column;
     margin: 0 auto;
-    /* padding: 93px 109px; */
     padding: 30px 25px;
     background: white;
     color: #499A18;
@@ -245,8 +236,6 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* align-items: flex-start; */
-    /* width: 45%; */
 }
 
 #about_text {
@@ -273,22 +262,15 @@ html, body {
 }
 
 .image {
-    /* display: flex; */
-    /* width: 30%; */
     margin: -100px 95px 0px;
     width: 150px;
     height: 147px;
-    /* width: 460px; */
-    /* height: 470px; */
 }
 
 .service {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
-    /* padding: 62px 109px; */
     padding: 30px 25px;
 }
 
@@ -298,33 +280,19 @@ html, body {
     margin-bottom: 40px;
     justify-content: start;
     text-align: left;
-    /* justify-self: center; */
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    /* align-self: flex-start; */
-    /* margin-top: 40px; */
-    /* margin-bottom: 75px; */
-    /* width: 1007px; */
-    /* height: 94px; */
 }
 
 .services_buttons {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: row; */
-    /* justify-content: space-between; */
     margin-top: 15px;
     gap: 10px;
-    /* width: 559px; */
-    /* height: 50px; */
 }
 
 .service_and {
     font-style: normal;
     font-weight: 400;
-    /* line-height: 52px; */
     font-family:'Inika-Regular';
-    /* font-size: 40px; */
     font-size: 25px;
     line-height: 32px;
     color: #499A18;
@@ -373,7 +341,6 @@ html, body {
     line-height: 20px;
     color: #717171;
     margin-top: 5px;
-    margin-bottom: 20px;
     font-family:'Inter-Regular';
     margin-bottom: 36px
 }
@@ -429,7 +396,6 @@ html, body {
 .price_link_text {
     width: 100px;
     font-weight: 700;
-    /* font-size: 20px; */
     font-size: 15px;
     line-height: 20px;
     color: #000000;
@@ -559,7 +525,6 @@ html, body {
     display: block;
     width: 34%;
     margin: 0 auto;
-    /* margin-right: 113px */
 }
 
 .content {
@@ -571,10 +536,8 @@ html, body {
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    /* line-height: 50px; */
     line-height: 24px;
     margin: 0 auto;
-    /* height: 130px; */
     background: white;
     padding: 0px 10px;
 }
@@ -621,7 +584,7 @@ a:hover {
 @media screen and (min-width: 768px) {
 
     .navbar {
-        padding: 35px 50px;
+        padding: 35px 50px 35px 43px;
     }
 
     .burger {
@@ -638,30 +601,36 @@ a:hover {
 
     .navigation .nav-list {
         flex-direction: row;
+        padding: 0;
+        padding-left: 150px;
     }
 
     .leafs {
         display: flex;
-        max-width: 100%;
+        width: 286px;
+        height: 255px;
+        margin-bottom: 60px;
     }
 
     .welcome {
-        padding: 62px 109px;
+        flex-direction: row-reverse;
+        padding: 35px 50px 70px 50px;
+        gap: 39px;
     }
 
     .welcome__text {
-        width: 45%;
+        width: 341px;
     }
 
     #text1 {
-        font-size: 45px;
+        font-size: 35px;
         line-height: 50px;
+        font-weight: 700;
     }
 
     #text2 {
-        margin-top: 40px;
-        font-size: 20px;
-        line-height: 35px;
+        font-size: 16px;
+        line-height: 25px;
     }
 
     .button_start {
@@ -682,7 +651,7 @@ a:hover {
         justify-content: space-between;
         align-items: flex-start;
         align-items: center;
-        max-width: 549px;
+        max-width: 668px;
     }
 
     #about_text {
@@ -699,7 +668,7 @@ a:hover {
     .about2 {
         font-size: 20px;
         line-height: 30px;
-        margin-bottom: 40px;
+        margin-bottom: 67px;
     }
 
     .image {
@@ -709,35 +678,21 @@ a:hover {
     }
 
     .service {
-        /* flex-direction: row; */
-        /* flex-wrap: wrap; */
-        /* justify-content: space-between; */
-        /* padding: 62px 109px; */
         padding: 60px 50px 70px 50px;
     }
 
     .service_content {
-        /* flex-direction: row;
-        text-align: left;
-        justify-self: center;
-        justify-content: space-between;
-        align-items: center;
-        align-self: flex-start;
-        margin-top: 40px;
-        margin-bottom: 75px;
-        width: 1007px;
-        height: 94px; */
         display: flex;
         flex-direction: column;
-
     }
 
     .services_buttons {
         flex-direction: row;
         /* justify-content: space-between; */
         flex-wrap: inherit;
-        width: 559px;
-        height: 50px;
+        gap: 38px;
+        /* width: 559px; */
+        /* height: 52px; */
     }
 
     .service_and {
@@ -745,6 +700,7 @@ a:hover {
         font-size: 40px; */
         font-size: 35px;
         line-height: 46px;
+        margin-bottom: 30px;
     }
 
     .services {
@@ -752,17 +708,28 @@ a:hover {
     }
 
     .service_item {
-        max-width: 330px;
+        max-width: 280px;
+    }
+
+    .service_img {
+        width: 280px;
+        height: 350px;
+    }
+
+    .lorem {
+        margin-left: 40px;
+        width: 202px;
+        margin-bottom: 18px;
     }
 
     .button {
-        /* padding: 12px 40px;
-        margin-left: 45px;
+        /* padding: 12px 40px; */
+        /* margin-left: 45px;  */
         width: 161px;
         height: 50px;
         font-size: 20px;
-        line-height: 26px; */
-        margin-left: 0px;
+        line-height: 26px;
+        /* margin-left: 0px; */
     }
 
     .price-link {
@@ -877,10 +844,13 @@ a:hover {
 
     .leafs {
         display: flex;
-        max-width: 100%;
+        width: 462px;
+        height: 424px;
     }
 
+
     .welcome {
+        flex-direction: row;
         padding: 62px 109px;
     }
 
@@ -913,6 +883,7 @@ a:hover {
 
     .about_us {
         width: 45%;
+        align-items: flex-start;
     }
 
     #about_text {
@@ -957,12 +928,14 @@ a:hover {
         justify-content: space-between;
         flex-wrap: inherit;
         width: 559px;
-        height: 50px;
+        height: 0px;
     }
 
     .service_and {
         line-height: 52px;
         font-size: 40px;
+        margin: 0;
+        margin-bottom: 40px;
     }
 
     .services {
@@ -980,6 +953,19 @@ a:hover {
         height: 50px;
         font-size: 20px;
         line-height: 26px;
+    }
+
+    .lorem {
+        margin-left: 20px;
+        width: 280px;
+        margin-bottom: 36px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .service_img {
+        width: 329px;
+        height: 350px;
     }
 
     .price-link {
