--- a/plants/style.css
+++ b/plants/style.css
@@ -373,15 +373,18 @@ html, body {
     color: #000000;
     font-family:'Inter-Regular';
 }
+
 .price-item {
     margin-bottom: 19px;
 }
+
 .price-block {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
+
 .price-link {
     display: flex;
     flex-direction: column;
@@ -401,6 +404,7 @@ html, body {
     color: #000000;
     font-family:'Inter-Regular'
 }
+
 .price-basic {
     display: flex;
     flex-direction: row;
@@ -411,6 +415,7 @@ html, body {
     background: #EDF2EC;
     border-radius: 20px;
 }
+
 .accord_btn {
     display: flex;
     justify-content: center;
@@ -419,6 +424,7 @@ html, body {
     width: 16px;
     height: 16px
 }
+
 .accord {
     display: block;
     background: #D9D9D9;
@@ -429,6 +435,7 @@ html, body {
     width: 16px;
     height: 16px;
 }
+
 .call_us_block {
     display: flex;
     flex-direction: column;
@@ -688,16 +695,11 @@ a:hover {
 
     .services_buttons {
         flex-direction: row;
-        /* justify-content: space-between; */
         flex-wrap: inherit;
         gap: 38px;
-        /* width: 559px; */
-        /* height: 52px; */
     }
 
     .service_and {
-        /* line-height: 52px;
-        font-size: 40px; */
         font-size: 35px;
         line-height: 46px;
         margin-bottom: 30px;
@@ -723,84 +725,116 @@ a:hover {
     }
 
     .button {
-        /* padding: 12px 40px; */
-        /* margin-left: 45px;  */
         width: 161px;
         height: 50px;
         font-size: 20px;
         line-height: 26px;
-        /* margin-left: 0px; */
     }
 
-    .price-link {
-        padding: 34px 41px;
-    }
-
-    .price-basic {
-        width: 250px;
+    .prices {
+        padding: 40px 50px 88px;
     }
 
     .prices_wrapper {
         flex-direction: row;
     }
 
-    .prices {
-        padding: 62px 109px;
+    .price-item {
+        margin-bottom: 0px;
     }
 
     .price-block {
         align-items: flex-start;
     }
 
-    .price-item {
-        margin-bottom: 0px;
+    .price-text {
+        font-size: 35px;
+        line-height: 42px;
+        margin-bottom: 53px;
+        padding-left: 15px;
+    }
+
+    .price-link {
+        padding: 34px 41px;
+    }
+
+    .price_link_text {
+        font-size: 20px;
+        line-height: 20px;
+    }
+
+    .price-basic {
+        width: 250px;
     }
 
     .our_best {
-        font-size: 40px;
-        line-height: 50px;
+        font-size: 25px;
+        line-height: 35px;
         text-align: right;
-        margin-bottom: 38px;
+        margin-bottom: 21px;
+    }
+
+    .call_us_block {
+        padding-top: 99px;
     }
 
     .text_call_us {
         align-items: flex-end;
     }
 
-    .contact__img {
-        display: flex;
+    .button2 {
+        margin-bottom: 34px;
     }
 
     .contacts {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        padding: 60px 109px 0 109px;
+        display: block;
+        padding: 40px 159px 0 159px;
     }
-
+    
     .contacts_content {
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        align-items: flex-end;
-        text-align: start;
-        width: 100%;
-        margin-bottom: 0;
+        display: block;
+        text-align: center;
+        margin-bottom: 130px;
     }
 
     .contact_us {
         font-size: 40px;
         line-height: 52px;
-        width: 100%;
-        text-align: left;
-        color: #499A18;
+        text-align: center;
+        margin-bottom: 100px;
     }
 
     .contacts_city {
-        height: 50px;
-        width: 450px;
+        margin-bottom: 250px;
     }
 
+    .city_text {
+        font-family:'Inter-Regular';
+        font-size: 20px;
+        color: #717171;
+    }
+    
+    .woman_img {
+        display: block;
+        width: 200px;
+        height: 250px;
+        margin: 0 auto;
+    }
+    
+    .content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+        font-family:'Inter-Regular';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;
+        margin: 0 auto;
+        background: white;
+        padding: 0px 10px;
+    }
     .button2 {
         margin-left: 30px;
         padding: 10px 27px;
@@ -809,9 +843,6 @@ a:hover {
         line-height: 26px;
     }
 
-    .woman_img {
-        margin-right: 113px
-    }
 }
 
 @media screen and (min-width: 1440px) {
@@ -847,7 +878,6 @@ a:hover {
         width: 462px;
         height: 424px;
     }
-
 
     .welcome {
         flex-direction: row;
@@ -1003,6 +1033,10 @@ a:hover {
         align-items: flex-end;
     }
 
+    .call_us_block {
+        padding-top: 0px;
+    }
+
     .contact__img {
         display: flex;
     }
@@ -1046,7 +1080,8 @@ a:hover {
     }
 
     .woman_img {
+        width: 400px;
+        height: 500px;
         margin-right: 113px
     }
 }
-
